--- a/index.html
+++ b/index.html
@@ -11,40 +11,48 @@
     <p id="result"></p>
 
     <script>
-        function uploadFile() {
-            const url = document.getElementById("url").value;
-            const encodedUrl = encodeURI(url);
-            const fileName = document.getElementById("fileName").value;
+    function uploadFile() {
+        const url = document.getElementById("url").value;
+        const encodedUrl = encodeURI(url);
+        const fileName = document.getElementById("fileName").value;
 
-            // Fetch the file content from the URL
-            fetch(encodedUrl)
-                .then(response => response.blob())
-                .then(file => {
-                    const formData = new FormData();
-                    formData.append('name', fileName);
-                    formData.append('anonymous', true);
-                    formData.append('file', file);
+        // Fetch the file content from the URL
+        fetch(encodedUrl)
+            .then(response => response.blob())
+            .then(file => {
+                const formData = new FormData();
+                formData.append('name', fileName);
+                formData.append('anonymous', true);
+                formData.append('file', file);
 
-                    // Send a POST request to the Pixeldrain API
-                    fetch('https://pixeldrain.com/api/file', {
-                        method: 'POST',
-                        body: formData
-                    })
-                    .then(response => response.json())
-                    .then(data => {
-                        const uploadURL = `https://pixeldrain.com/u/${data.id}`;
-                        document.getElementById("result").textContent = uploadURL;
-                    })
-                    .catch(error => {
-                        console.error(error);
-                        document.getElementById("result").textContent = "Error uploading the file.";
-                    });
+                // Send a POST request to the Pixeldrain API
+                fetch('https://pixeldrain.com/api/file', {
+                    method: 'POST',
+                    body: formData
+                })
+                .then(response => {
+                    console.log('Pixeldrain API Response:', response);
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    console.log('Pixeldrain API Data:', data);
+                    const uploadURL = `https://pixeldrain.com/u/${data.id}`;
+                    document.getElementById("result").textContent = uploadURL;
                 })
                 .catch(error => {
-                    console.error(error);
-                    document.getElementById("result").textContent = "Error fetching the file.";
+                    console.error('Pixeldrain API Error:', error);
+                    document.getElementById("result").textContent = "Error uploading the file.";
                 });
-        }
+            })
+            .catch(error => {
+                console.error('File Fetch Error:', error);
+                document.getElementById("result").textContent = "Error fetching the file.";
+            });
+    }
     </script>
+        
 </body>
 </html>
