--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,48 +16,53 @@
             const encodedUrl = encodeURI(url);
             const fileName = document.getElementById("fileName").value;
 
-            // Get the user's browser User-Agent
-            const userAgent = navigator.userAgent;
+            // Create a new XMLHttpRequest object
+            const xhr = new XMLHttpRequest();
 
-            // Fetch the file content from the URL
-            fetch(encodedUrl, {
-                headers: {
-                    'User-Agent': userAgent
+            // Configure it as a GET request
+            xhr.open('GET', encodedUrl, true);
+
+            // Set the responseType to 'blob' for binary data
+            xhr.responseType = 'blob';
+
+            // Define the onload event handler
+            xhr.onload = function() {
+                if (xhr.status === 200) {
+                    const file = xhr.response;
+
+                    const formData = new FormData();
+                    formData.append('name', fileName);
+                    formData.append('anonymous', true);
+                    formData.append('file', file);
+
+                    // Send a POST request to the Pixeldrain API
+                    fetch('https://pixeldrain.com/api/file', {
+                        method: 'POST',
+                        body: formData
+                    })
+                    .then(response => response.json())
+                    .then(data => {
+                        const uploadURL = `https://pixeldrain.com/u/${data.id}`;
+                        document.getElementById("result").textContent = uploadURL;
+                    })
+                    .catch(error => {
+                        console.error(error);
+                        document.getElementById("result").textContent = "Error uploading the file.";
+                    });
+                } else {
+                    console.error('File Fetch Error:', xhr.statusText);
+                    document.getElementById("result").textContent = "Error fetching the file.";
                 }
-            })
-            .then(response => response.blob())
-            .then(file => {
-                const formData = new FormData();
-                formData.append('name', fileName);
-                formData.append('anonymous', true);
-                formData.append('file', file);
+            };
 
-                // Send a POST request to the Pixeldrain API
-                fetch('https://pixeldrain.com/api/file', {
-                    method: 'POST',
-                    body: formData
-                })
-                .then(response => {
-                    console.log('Pixeldrain API Response:', response);
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    console.log('Pixeldrain API Data:', data);
-                    const uploadURL = `https://pixeldrain.com/u/${data.id}`;
-                    document.getElementById("result").textContent = uploadURL;
-                })
-                .catch(error => {
-                    console.error('Pixeldrain API Error:', error);
-                    document.getElementById("result").textContent = "Error uploading the file.";
-                });
-            })
-            .catch(error => {
-                console.error('File Fetch Error:', error);
+            // Define the onerror event handler
+            xhr.onerror = function() {
+                console.error('File Fetch Error:', xhr.statusText);
                 document.getElementById("result").textContent = "Error fetching the file.";
-            });
+            };
+
+            // Send the request
+            xhr.send();
         }
     </script>
 </body>
