--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         function uploadFile() {
             const url = document.getElementById("url").value;
             const encodedUrl = encodeURI(url);
-            const fileName = document.getElementById("fileName").value;
+            let fileName = document.getElementById("fileName").value;
+
+            // If custom file name is empty, extract file name from the URL
+            if (!fileName) {
+                const urlParts = url.split('/');
+                fileName = urlParts[urlParts.length - 1];
+            }
 
             // Fetch the file content from the URL with 'no-cors' mode
             fetch(encodedUrl, { mode: 'no-cors' })
@@ -26,23 +32,19 @@
                 formData.append('file', file);
 
                 // Send a POST request to the Pixeldrain API
-                fetch('https://pixeldrain.com/api/file', {
+                return fetch('https://pixeldrain.com/api/file', {
                     method: 'POST',
                     body: formData
-                })
-                .then(response => response.json())
-                .then(data => {
-                    const uploadURL = `https://pixeldrain.com/u/${data.id}`;
-                    document.getElementById("result").textContent = uploadURL;
-                })
-                .catch(error => {
-                    console.error(error);
-                    document.getElementById("result").textContent = "Error uploading the file.";
                 });
             })
+            .then(response => response.json())
+            .then(data => {
+                const uploadURL = `https://pixeldrain.com/u/${data.id}`;
+                document.getElementById("result").textContent = uploadURL;
+            })
             .catch(error => {
-                console.error('File Fetch Error:', error);
-                document.getElementById("result").textContent = "Error fetching the file.";
+                console.error(error);
+                document.getElementById("result").textContent = "Error uploading the file.";
             });
         }
     </script>
