--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             fetch(encodedUrl, { mode: 'no-cors' })
             .then(response => {
                 if (!response.ok) {
-                    throw new Error('Network response was not ok');
+                    throw new Error(`Network response was not ok: ${response.statusText}`);
                 }
                 return response.blob();
             })
@@ -45,7 +45,7 @@
             })
             .then(response => {
                 if (!response.ok) {
-                    throw new Error('Pixeldrain API request failed');
+                    throw new Error(`Pixeldrain API request failed: ${response.statusText}`);
                 }
                 return response.json();
             })
@@ -54,8 +54,8 @@
                 document.getElementById("result").textContent = uploadURL;
             })
             .catch(error => {
-                console.error('Error:', error);
-                document.getElementById("result").textContent = "Error uploading the file.";
+                console.error('Error:', error.message);
+                document.getElementById("result").textContent = `Error uploading the file: ${error.message}`;
             });
         }
     </script>
