--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <h1>File Uploader</h1>
     <input type="text" id="url" placeholder="Enter File URL">
     <input type="text" id="fileName" placeholder="Enter File Name With Extension">
+    <button onclick="downloadFile()">Download File</button>
     <button onclick="uploadFile()">Upload File</button>
     <p id="result"></p>
 
     <script>
+        async function downloadFile() {
+            const url = document.getElementById("url").value;
+            const encodedUrl = encodeURI(url);
+            const fileName = document.getElementById("fileName").value;
+
+            const link = document.createElement('a');
+            link.href = encodedUrl;
+            link.download = fileName;
+            
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }
+
         async function uploadFile() {
             const url = document.getElementById("url").value;
             const encodedUrl = encodeURI(url);
