--- a/index.html
+++ b/index.html
@@ -1,154 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Torrent Search</title>
-  <script>
-    function searchTorrent(query) {
-      const trackers = [
-        'site:1337x.to',
-        'site:acg.rip',
-        'site:anidex.info',
-        'site:anilibria.tv',
-        'site:animetime.cc',
-        'site:animetosho.org',
-        'site:anirena.com',
-        'site:anisource.net',
-        'site:audiobookbay.nl',
-        'site:badass-torrents.com',
-        'site:bangumi.moe',
-        'site:biatchtorrents.com',
-        'site:bigfangroup.org',
-        'site:bitru.org',
-        'site:bitsearch.to',
-        'site:bt.etree.org',
-        'site:btmet.com',
-        'site:btsow.com',
-        'site:byrutor.org',
-        'site:cinecalidad.to',
-        'site:comi.cat',
-        'site:concen.org',
-        'site:cpasbien.to',
-        'site:cpasbien-clone.fr',
-        'site:crackingpatching.com',
-        'site:demonoid.is',
-        'site:divxtotal2.net',
-        'site:dmhy.org',
-        'site:donTorrent.org',
-        'site:e-hentai.org',
-        'site:ebookbay.la',
-        'site:epublibre.org',
-        'site:ext-torrents.me',
-        'site:extratorrent.st',
-        'site:eztv.io',
-        'site:frozenlayer.tk',
-        'site:gamestorrents.io',
-        'site:gktorrent.biz',
-        'site:glodls.to',
-        'site:gtorrent.pro',
-        'site:idope.se',
-        'site:ilcorsaronero.info',
-        'site:archive.org',
-        'site:isohunt2.net',
-        'site:itorrent.me',
-        'site:javtorrent.re',
-        'site:kickasstorrents.to',
-        'site:kickasstorrents.ws',
-        'site:knaben.cc',
-        'site:leporno.info',
-        'site:limetorrents.info',
-        'site:limetorrents-clone.org',
-        'site:linuxtracker.org',
-        'site:mactorrents.io',
-        'site:megapeer.org',
-        'site:mejortorrent.org',
-        'site:mikanani.me',
-        'site:miobt.net',
-        'site:mixtapetorrent.com',
-        'site:moviesdvdr.com',
-        'site:myporn.club',
-        'site:nextjav.com',
-        'site:newstudio.tv',
-        'site:nipponsei.minglong.org',
-        'site:nntt.ws',
-        'site:nnm-club.me',
-        'site:nyaa.si',
-        'site:okbt.net',
-        'site:onejav.com',
-        'site:parnuxi.to',
-        'site:pc-torrent.net',
-        'site:pornotorrent.to',
-        'site:postman.i2p',
-        'site:proporn.com',
-        'site:rapidzona.tv',
-        'site:rintor.org',
-        'site:rutor.info',
-        'site:rutracker.org',
-        'site:seedoff.net',
-        'site:sexy-pics.net',
-        'site:shanaproject.com',
-        'site:shizaproject.net',
-        'site:showrss.info',
-        'site:simpleanime.me',
-        'site:solidtorrents.net',
-        'site:sosulki.com',
-        'site:subsplease.org',
-        'site:sukebei.nyaa.si',
-        'site:thepiratebay.org',
-        'site:therarbg.org',
-        'site:tokyotosho.info',
-        'site:torlock.com',
-        'site:torrentcore.org',
-        'site:torrent-oyunindir.com',
-        'site:torrent.by',
-        'site:torrent-pirat.com',
-        'site:torrent9.to',
-        'site:torrent9-clone.fr',
-        'site:torrent911.org',
-        'site:torrentfunk.com',
-        'site:torrentdownloads.me',
-        'site:torrentgalaxy.to',
-        'site:torrentkitty.tv',
-        'site:torrentproject2.se',
-        'site:torrentqq.pw',
-        'site:torrents.csv',
-        'site:torrentsir.com',
-        'site:torrentview.me',
-        'site:torrentwhiz.com',
-        'site:torrentz2.eu',
-        'site:torrentz2.nz',
-        'site:trahit.net',
-        'site:trupornolabs.com',
-        'site:uniondht.org',
-        'site:vsthouse.ru',
-        'site:vsttorrentz.com',
-        'site:vstorrent.net',
-        'site:xxxadulttorrent.org',
-        'site:xxxclub.org',
-        'site:xxxtor.net',
-        'site:yourbittorrent.com',
-        'site:yts.mx',
-        'site:zetorrents.com'
-      ];
-
-      const googleQuery = trackers.map(tracker => `${query} ${tracker}`).join(' OR ');
-
-      window.location.href = `https://www.google.com/search?q=${encodeURIComponent(googleQuery)}`;
-    }
-
-    function handleSearch() {
-      const query = document.getElementById('searchInput').value;
-      searchTorrent(query);
-    }
-  </script>
-</head>
-<body>
-  <h1>Torrent Search</h1>
-  <form onsubmit="event.preventDefault(); handleSearch();">
-    <label for="searchInput">Search:</label>
-    <input type="text" id="searchInput" name="searchInput" required>
-    <button type="submit">Search</button>
-  </form>
-</body>
-</html>
+wwww
